#19 - Updated remaining endpoints (Delete and POST)